# ucar_test

./: Dockerfile  README.md  docker-compose.yml  init.sql  main.py  pyproject.toml
src/app/: dependencies.py  endpoints.py  models.py  repository.py
src/app/db/: core.py  db.sql
src/logicinit/: config.py
