[project]
name = "ucar-test"
version = "0.1.0"
description = ""
authors = [
    {name = "Dmitriy",email = "freedev39@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.121.0,<0.122.0)",
    "pydantic (>=2.12.4,<3.0.0)",
    "aiosql (>=13.4,<14.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
